# Windows-Machine-Learning

./: .gitignore  .gitmodules  README.md  ThirdPartyNotices.txt  appveyor.yml  azure-pipelines-samples.yml  package.config
.github/: CODEOWNERS  ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: custom.md
Samples/: .gitignore
Samples/AdapterSelection/: AdapterSelection.sln
Samples/AudioPreprocessing/: App.xaml  App.xaml.cs  AudioPreprocessing.csproj  AudioPreprocessing.sln  MainPage.xaml  MainPage.xaml.cs  Package.appxmanifest
Samples/BackgroundBlur/: BackgroundBlur.sln  TransformAsync.sln
Samples/BatchSample/: BatchSample.sln
Samples/BatchSupport/: BatchSupport.sln  readme.md
Samples/CustomOperator/: debug_readme.md
Samples/CustomOperatorCPU/: debug_readme.md
Samples/CustomTensorization/: .gitignore  CustomTensorization.sln  readme.md
Samples/DXCore_WinRTComponent/: DXCoreHelper.cpp  DXCoreHelper.h  DXCore_WinRTComponent.sln  DXCore_WinRTComponent.vcxproj  DXCore_WinRTComponent.vcxproj.filters  pch.h  readme.md
Samples/DeviceTarget/: DeviceTarget.sln
Samples/FNSCandyStyleTransfer/: README.md
Samples/NamedDimensionOverrides/: NamedDimensionOverrides.sln  readme.md
Samples/RustSqueezenet/: Cargo.toml  README.md  build.rs  copy_collateral.bat
Samples/RustSqueezenet/src/: main.rs
Samples/SampleSharedLib/: SampleSharedLib.sln
Samples/SqueezeNetObjectDetection/: SqueezeNetObjectDetection.sln
Samples/StyleTransfer/: App.xaml  (+17 more)
Testing/: README.md
Tools/: Common.h  ModelBinding.h  README.md  WinMLModelRunner.vcxproj
templates/: build.yml
(+1141 files in other folders)
