[package]
name = "rust_squeezenet"
version = "0.1.0"
authors = ["Microsoft"]
edition = "2018"

[dependencies]
winrt = { path = "./winrt-rs" }
winrt_macros = { git = "https://github.com/microsoft/winrt-rs",  version = "0.7.2" }

[build-dependencies]
winrt = { path = "./winrt-rs" }

[package.metadata.winrt.dependencies]
"Microsoft.Windows.SDK.Contracts" = "10.0.19041.1"
"Microsoft.AI.MachineLearning" = "1.3.0"
